[package]
name = "location"
version = "0.1.0"
authors = ["yuchunzhou <chunzhou.yu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sincere"
path = "src/sincere.rs"

[[bin]]
name = "warp"
path = "src/warp.rs"

[[bin]]
name = "tide"
path = "src/tide.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlite = "0.25.3"
num_cpus = "1.13.0"
sincere = "0.6.6"
warp = "0.2"
tokio = { version = "0.2", features = ["full"] }
tide = "0.14.0"
async-std = { version = "1.6.0", features = ["attributes"] }
